<resources>
    <string name="app_name">CPay</string>
    <string name="start_payment">Start Payment</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_in">LOG IN</string>
    <string name="key_management">KEY MANAGEMENT</string>
    <string name="input">INPUT</string>
    <string name="first_key_component_custodian_password">First key component custodian password</string>
    <string name="second_key_component_custodian_password">Second key component custodian password</string>
    <string name="new_terminal_key">NEW TERMINAL KEY</string>
    <string name="change_work_keys">CHANGE WORK KEYS</string>
    <string name="key_component">Key component</string>
    <string name="first_key_component">First key component</string>
    <string name="second_key_component">Second key component</string>
    <string name="delete_keys">DELETE KEYS</string>
    <string name="sign_in">SIGN IN</string>
    <string name="e_mail_confirmation_code">E-mail confirmation code</string>
    <string name="send">SEND</string>
    <string name="create">CREATE</string>
    <string name="exit">EXIT</string>
</resources>
